Clean-up + fix shift on mobile

--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -1,17 +1,17 @@
 nav {
-	font-family: "Amatic SC";
-	font-weight: bold;
-	font-size: 25px;
-	width: 100%;
-	text-align: center;
-	height: 50px;
-	line-height: 50px;
-	position: fixed;
-	z-index: 20;
-	top: 0;
 	background-color: white;
 	background-image: linear-gradient(315deg, white 0%, var(--hawkes-blue) 74%);
 	box-shadow: 0 4px 2px -2px gray;
+	font-family: "Amatic SC";
+	font-size: 25px;
+	font-weight: bold;
+	height: 50px;
+	line-height: 50px;
+	position: fixed;
+	text-align: center;
+	top: 0;
+	width: 100%;
+	z-index: 20;
 }
 
 nav li {
@@ -56,25 +56,14 @@ nav li:hover .border {
 	display: none;
 }
 
-/* .menu-button:hover {
-	background-color: var(--california-gold);
-} */
-
-/* .menu-button:hover .menu-lines,
-.menu-button:hover .menu-lines::before,
-.menu-button:hover .menu-lines::after {
-	background-color: white;
-} */
-
 .menu-lines,
 .menu-lines::before,
 .menu-lines::after {
-	width: 30px;
-	height: 5px;
 	background-color: var(--california-gold);
 	border-radius: 2px;
-	/* box-shadow: 0 2px 5px gray; */
+	height: 5px;
 	transition: all 0.5s ease-in-out;
+	width: 30px;
 }
 
 .menu-lines::before,
@@ -93,7 +82,6 @@ nav li:hover .border {
 }
 
 #check-menu:checked ~ label > .menu-lines {
-	/* transform: translateX(-50px); */
 	background-color: transparent;
 	box-shadow: none;
 }
